--- a/other_dataset/satellite/Sat_Application.Rmd
+++ b/other_dataset/satellite/Sat_Application.Rmd
@@ -171,7 +171,7 @@ pred_drop_layer <- layer_dropout(rate=pred_drop)
 
 ```{r}
 sat_dat <- data.frame(long = long, lat = lat, y = y)  
-
+curr_index = 1
 for (curr_index in 1:num_fold) {
   train_index <- which(train_index_all != curr_index)
   
@@ -639,10 +639,10 @@ crps <- function(prediction_matrix, true_value){
 }
 
 
-pred_dnn <- as.matrix(read.csv("D:/77/Reasearch/temp/sat_pred/dnn_pred_sat.csv"))
-pred_dk <- as.matrix(read.csv("D:/77/Reasearch/temp/sat_pred/dk_pred_sat.csv"))
-pred_ck <- as.matrix(read.csv("D:/77/Reasearch/temp/sat_pred/ck_pred_sat.csv"))
-pred_inla <- as.matrix(read.csv("D:/77/Reasearch/temp/sat_pred/inla_pred_sat.csv"))
+pred_dnn <- as.matrix(read.csv("D:/77/Research/temp/sat_pred/dnn_pred_sat.csv"))
+pred_dk <- as.matrix(read.csv("D:/77/Research/temp/sat_pred/dk_pred_sat.csv"))
+pred_ck <- as.matrix(read.csv("D:/77/Research/temp/sat_pred/ck_pred_sat.csv"))
+pred_inla <- as.matrix(read.csv("D:/77/Research/temp/sat_pred/inla_pred_sat.csv"))
 
 crps_dnn_all <- crps(pred_dnn,y)
 crps_dk_all <- crps(pred_dk,y)
@@ -657,10 +657,10 @@ print(paste("CRPS of CK is: ", mean(crps_ck_all)))
 print(paste("CRPS of INLA is: ", mean(crps_inla_all)))
 
 
-write.csv(crps_dnn_all,"D:/77/Reasearch/temp/sat_pred/crps_dnn_sat.csv",row.names = FALSE)
-write.csv(crps_dk_all,"D:/77/Reasearch/temp/sat_pred/crps_dk_sat.csv",row.names = FALSE)
-write.csv(crps_ck_all,"D:/77/Reasearch/temp/sat_pred/crps_ck_sat.csv",row.names = FALSE)
-write.csv(crps_inla_all,"D:/77/Reasearch/temp/sat_pred/crps_inla_sat.csv",row.names = FALSE)
+write.csv(crps_dnn_all,"D:/77/Research/temp/sat_pred/crps_dnn_sat.csv",row.names = FALSE)
+write.csv(crps_dk_all,"D:/77/Research/temp/sat_pred/crps_dk_sat.csv",row.names = FALSE)
+write.csv(crps_ck_all,"D:/77/Research/temp/sat_pred/crps_ck_sat.csv",row.names = FALSE)
+write.csv(crps_inla_all,"D:/77/Research/temp/sat_pred/crps_inla_sat.csv",row.names = FALSE)
 
 
 ```
@@ -681,7 +681,7 @@ all_interval_score <- function(prediction_sample, alpha = 0.05, true_x){
                      max = num_all, # Maximum value of the progress bar
                      style = 3,    # Progress bar style (also available style = 1 and style = 2)
                      width = 50,   # Progress bar width. Defaults to getOption("width")
-                     char = "=")   # Character used to create the bar
+                     char = "=")   # Character used to cRete the bar
  
   
   all_score <- rep(NA, length(true_x))
@@ -707,10 +707,10 @@ print(paste("Interval Score of INLA is: ", mean(int_score_inla )))
 
 
 
-write.csv(int_score_dnn,"D:/77/Reasearch/temp/sat_pred/int_dnn_sat.csv",row.names = FALSE)
-write.csv(int_score_dk,"D:/77/Reasearch/temp/sat_pred/int_dk_sat.csv",row.names = FALSE)
-write.csv(int_score_ck,"D:/77/Reasearch/temp/sat_pred/int_ck_sat.csv",row.names = FALSE)
-write.csv(int_score_inla,"D:/77/Reasearch/temp/sat_pred/int_inla_sat.csv",row.names = FALSE)
+write.csv(int_score_dnn,"D:/77/Research/temp/sat_pred/int_dnn_sat.csv",row.names = FALSE)
+write.csv(int_score_dk,"D:/77/Research/temp/sat_pred/int_dk_sat.csv",row.names = FALSE)
+write.csv(int_score_ck,"D:/77/Research/temp/sat_pred/int_ck_sat.csv",row.names = FALSE)
+write.csv(int_score_inla,"D:/77/Research/temp/sat_pred/int_inla_sat.csv",row.names = FALSE)
 
 ```
 
