--- a/Qi_simulation/Qi's 2d Simulation.Rmd
+++ b/Qi_simulation/Qi's 2d Simulation.Rmd
@@ -46,16 +46,14 @@ coordinates(eh_dat) <- ~ long + lat
 
 # Parameters setting
 set.seed(0)
-num_fold <- 5
 num_sample <- 100
 pred_drop <- 0.1
-train_index_all <- sample(1:num_fold, length(y), replace = T)
 
 
-pred_dnn <- matrix(NA,nrow = length(y), ncol = num_sample)
-pred_dk <- matrix(NA,nrow = length(y), ncol = num_sample)
-pred_ck <- matrix(NA,nrow = length(y), ncol = num_sample)
-pred_inla <- matrix(NA,nrow = length(y), ncol = num_sample)
+pred_dnn <- array(NA, dim = c(num_sample, num_fold, floor(length(y)*0.1)))
+pred_dk <- array(NA, dim = c(num_sample, num_fold, floor(length(y)*0.1)))
+# pred_ck <- matrix(NA,nrow = length(y), ncol = num_sample)
+# pred_inla <- matrix(NA,nrow = length(y), ncol = num_sample)
 ```
 
 
@@ -131,19 +129,26 @@ pred_drop_layer <- layer_dropout(rate=pred_drop)
 #DNN
 
 ```{r}
+set.seed(0)
 eh_dat <- data.frame(long = long, lat = lat, y = y)  
+tr_idx <- sample(1:nrow(eh_dat),floor(nrow(eh_dat)*0.9))
+eh_tr <- eh_dat[tr_idx,]
+eh_te <- eh_dat[-tr_idx,]
 
+num_fold <- 5
+train_index_all <- sample(1:num_fold, nrow(eh_tr), replace = T)
 for (curr_index in 1:num_fold) {
+  
   train_index <- which(train_index_all != curr_index)
   
-  x_tr <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat))  )[train_index,]
-  x_te <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat))  )[-train_index,]
+  x_tr_tr <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat))  )[tr_idx[train_index],]
+  x_tr_va <- as.matrix( cbind(min_max_scale(long),min_max_scale(lat))  )[tr_idx[-train_index],]
 
-  y_tr <- y[train_index]
-  y_te <- y[-train_index]
+  y_tr_tr <- y[tr_idx[train_index]]
+  y_tr_va <- y[tr_idx[-train_index]]
 
 
-  dnn_input_layer <- layer_input(shape = c(ncol(x_tr))) 
+  dnn_input_layer <- layer_input(shape = c(ncol(x_tr_tr))) 
 
   dnn_output_layer <- dnn_input_layer %>% 
   layer_dense(units = 100, activation = 'relu',  kernel_initializer = "he_uniform") %>% 
@@ -176,21 +181,22 @@ model_dnn %>% compile(
 )
   
 mod_train_dnn <- model_dnn %>%
-  fit(x = x_tr, y = y_tr, epochs = 1000, batch_size = 2000, 
-      validation_data = list(x_te, y_te) , callbacks = list(model_checkpoint))
+  fit(x = x_tr_tr, y = y_tr_tr, epochs = 1500, batch_size = 1000, 
+      validation_data = list(x_tr_va, y_tr_va) , callbacks = list(model_checkpoint))
 
 model_dnn %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
 
 
 for (j in 1:num_sample) {
   print(j)
-  pred_dnn[-train_index,j] <- predict(model_dnn, x_te)
+  pred_dnn[j, curr_index, ] <- predict(model_dnn, 
+                                       as.matrix( cbind(min_max_scale(long),min_max_scale(lat))  )[-tr_idx,]
+                                       )
 }
 
-
 }
-
-
+# Check prediction MSE
+mean((apply(pred_dnn[,1,], 2 , mean) - y[-tr_idx])^2)
 
 ```
 
@@ -198,27 +204,25 @@ for (j in 1:num_sample) {
 
 ```{r}
 
-
-
 for (curr_index in 1:num_fold) {
   
   train_index <- which(train_index_all != curr_index)
-  basis_tr_1  <- basis_1[train_index,]
-  basis_te_1  <- basis_1[-train_index,]
+  basis_tr_1  <- basis_1[tr_idx[train_index],]
+  basis_te_1  <- basis_1[tr_idx[-train_index],]
   
-  basis_tr_2  <- basis_2[train_index,]
-  basis_te_2  <- basis_2[-train_index,]
+  basis_tr_2  <- basis_2[tr_idx[train_index],]
+  basis_te_2  <- basis_2[tr_idx[-train_index],]
   
-  basis_tr_3  <- basis_3[train_index,]
-  basis_te_3  <- basis_3[-train_index,]
-  x_tr <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[train_index,],basis_tr_1, basis_tr_2, basis_tr_3)
-  x_te <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[-train_index,],basis_te_1, basis_te_2, basis_te_3)
+  basis_tr_3  <- basis_3[tr_idx[train_index],]
+  basis_te_3  <- basis_3[tr_idx[-train_index],]
+  x_tr_tr <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[tr_idx[train_index],],basis_tr_1, basis_tr_2, basis_tr_3)
+  x_tr_va <- cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[-train_index,],basis_te_1, basis_te_2, basis_te_3)
 
-  y_tr <- y[train_index]
-  y_te <- y[-train_index]
+  y_tr_tr <- y[tr_idx[train_index]]
+  y_tr_va <- y[tr_idx[-train_index]]
 
 
-  dk_input_layer <- layer_input(shape = c(ncol(x_tr))) 
+  dk_input_layer <- layer_input(shape = c(ncol(x_tr_tr))) 
 
   dk_output_layer <- dk_input_layer %>% 
   layer_dense(units = 100, activation = 'relu', kernel_initializer = "he_uniform") %>% 
@@ -252,8 +256,8 @@ model_dk %>% compile(
   
   
 mod_train_dk <- model_dk %>%
-  fit(x = x_tr, y = y_tr, epochs =1000, batch_size = 2000, 
-      validation_data = list(x_te, y_te) , callbacks = model_checkpoint)
+  fit(x = x_tr_tr, y = y_tr_tr, epochs =1000, batch_size = 2000, 
+      validation_data = list(x_tr_va, y_tr_va) , callbacks = model_checkpoint)
 
 
 model_dk %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
@@ -261,7 +265,8 @@ model_dk %>% load_model_weights_hdf5("D:/77/research/temp/best_weights.h5")
 
 for (j in 1:num_sample) {
   print(j)
-  pred_dk[-train_index,j] <- predict(model_dk, x_te)
+  pred_dk[j, curr_index, ] <- predict(model_dk,  cbind(as.matrix(cbind(min_max_scale(long),min_max_scale(lat)))[-tr_idx,], basis_1[-tr_idx,], basis_2[-tr_idx,], basis_3[-tr_idx,]))
+  
 }
 
 }
