--- a/us_soc/soc_application.Rmd
+++ b/us_soc/soc_application.Rmd
@@ -73,10 +73,36 @@ gridbasis1 <- auto_basis(mainfold = plane(), data = soc_dat, nres = 1, type = "G
 gridbasis2 <- auto_basis(mainfold = plane(), data = soc_dat, nres = 2, type = "Gaussian", regular = 1)
 gridbasis3 <- auto_basis(mainfold = plane(), data = soc_dat, nres = 3, type = "Gaussian", regular = 1)
 
-show_basis(gridbasis3) + 
-  coord_fixed() +
+basis_use <- gridbasis3@df
+# Function to create circle coordinates
+create_circle <- function(center_x, center_y, radius, n_points = 100) {
+  angle <- seq(0, 2 * pi, length.out = n_points)
+  x <- center_x + radius * cos(angle)
+  y <- center_y + radius * sin(angle)
+  return(data.frame(x, y))
+}
+
+color_plate <- c("red","blue","yellow")
+# Plot circles with different colors
+p <- ggplot() +
+  theme_minimal() +
   xlab("Longitude") +
-  ylab("Latitude")
+  ylab("Latitude") +
+  ggtitle("Basis Functions in Three Resolution") + 
+  theme(plot.title = element_text(hjust = 0.5))
+
+for (i in 1:nrow(basis_use)) {
+  print(i)
+  circle_data <- create_circle(basis_use$loc1[i], basis_use$loc2[i], basis_use$scale[i]*0.6)
+  p <- p + geom_polygon(data = circle_data, aes(x, y), fill = alpha(color_plate[basis_use$res[i]], 0.5))
+}
+p <- p + guides(fill = guide_legend(
+  title = "Legend",
+  override.aes = list(color = color_plate, fill = color_plate),
+  label = c("Res 1", "Res 2", "Res 3")
+))
+
+print(p)
 
 basis_1 <- matrix(NA, nrow = nrow(soc_dat), ncol = length(gridbasis1@fn))
 for (i in 1:length(gridbasis1@fn)) {
